--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "default-passive-events": "^2.0.0",
     "express": "^4.18.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.4",
